# Falcon

./: Book2.xlsx  database.db  database.sqbpro  database2.db  fuel 2023-01-2:2023-01-18.xlsx  go.mod  go.sum  main.go  selfsigned.crt  selfsigned.key  tasks.xlsx  test.xlsx
AbstractFunctions/: Functions.go
AddEvent/: Add.go
Apis/: Apis.go  Driver_Salary.go  ExcelFunctions.go  Landmarks.go  SideFunctions.go  oil_controllers.go  tire.go
Constants/: const.go
Controllers/: DriverFunctions.go  authController.go  fee.go  instapay.go  position.go  regex.go  tire.go  trip.go  truck.go
Database/: DB.go  GormConnection.go
FiberConfig/: Routes.go
ManipulateData/: Data.go
Models/: car.go  driver.go  excel.go  fuel.go  instapay.go  landmark.go  location.go  oil.go  service.go  setup.go  trip.go  truck.go  user.go
Notifications/: notifications.go
PreviewData/: Preview.go
Salaries/: Salary For Ahmed Badr From 01-07-2023 To 05-08-2023.xlsx  Salary For Test From 02-01-2024 To 02-01-2024.xlsx  Salary For متي زكي From 01-08-2023 To 07-08-2023.xlsx
Scrapper/: EtitScrapper.go  Landmarks.go  RouteHistory.go  feerate_test.go
Structs/: Structs.go
Templates/: AddDailyDelivery.html  AddServiceEvent.html  all-daily-deliveries.html  all-service-events.html
Validation/: Validation.go
falcon_1/: README.md  pubspec.yaml
falcon_1/android/: key.properties  local.properties
falcon_driver_app/: README.md  pubspec.yaml
ffiRust/: Cargo.toml
ffiRust/src/: apis.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  main.rs
middleware/: auth.go
static/: Instapay.xlsx
(+106 files in other folders)
