[package]
name = "Apex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="Apex"
crate-type = ["lib", "staticlib", "cdylib"]
[dependencies]
cargo-xcode = "1.5.0"
chrono = "0.4.26"
flutter_rust_bridge = "1.77.1"
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
flutter_rust_bridge_codegen = "1.75.1"
anyhow = "1.0.71"
regex = "1.8.3"
flate2 = "1.0"
use = "0.0.0"
bytes = "1.4.0"
